tests/grammar/schema/check_block/check_block_fail_10/stderr.golden
error[E3M38]: EvaluationError
 --> ${CWD}/main.k:8:9
  |
8 | count = Count {
  |         ^ Instance check failed
  |
 --> ${CWD}/main.k:6:1
  |
6 |         secondCount < 100
  |  Check failed on the condition
  |